KNN with categoricals

--- a/Real document.Rmd
+++ b/Real document.Rmd
@@ -85,7 +85,7 @@ varImpPlot(rf_model, main = "Variable Importance (Random Forest)")
 
 library(class)
 
-# 1. Predictor columns
+# 1. Predictor columns (numeric)
 predictor_cols <- c(
   "Age",
   "Academic.Pressure",
@@ -104,14 +104,14 @@ knn_test  <- rf_data[-train_idx, ]
 X_train <- knn_train[, predictor_cols]
 X_test  <- knn_test[, predictor_cols]
 
-# Ensure all predictors are numeric 
+# all predictors are numeric 
 X_train <- data.frame(lapply(X_train, function(z) as.numeric(as.character(z))))
 X_test  <- data.frame(lapply(X_test,  function(z) as.numeric(as.character(z))))
 
 y_train <- knn_train$Depression
 y_test  <- knn_test$Depression
 
-# 3. Drop any rows with NA in predictors or response
+# 3. Drop any rows with NA
 train_complete <- complete.cases(X_train) & !is.na(y_train)
 test_complete  <- complete.cases(X_test)  & !is.na(y_test)
 
@@ -121,7 +121,7 @@ y_train <- y_train[train_complete]
 X_test  <- X_test[test_complete, , drop = FALSE]
 y_test  <- y_test[test_complete]
 
-# 4. 5-fold cross-validation on TRAIN set to choose between k = 5 and k = 10
+# 4. 5-fold cross-validation on TRAIN 
 set.seed(123)
 
 n_train <- nrow(X_train)
@@ -167,12 +167,12 @@ for (j in seq_along(k_values)) {
   cv_acc[j] <- mean(fold_acc)
 }
 
-# 5. CV results and best k (5 or 10)
+# 5. CV results and best k 
 knn_cv_results <- data.frame(
   k = k_values,
   cv_accuracy = cv_acc
 )
-knn_cv_results   # small table for your report
+knn_cv_results  
 
 best_idx <- which.max(cv_acc)
 best_k <- k_values[best_idx]
@@ -214,11 +214,11 @@ plot(
 
 ```{r}
 
-##----------------------------Munisa's KNN with numeric + categorical-----------------------------------------
+##-------------------------Munisa's KNN with numeric + categorical--------------------------------
 
 library(class)
 
-# 0. Read full data (again, separate from rf_data)
+# New data frame
 df_all <- read.csv("student_depression_dataset.csv")
 
 # 1. Select numeric + categorical predictors + response
@@ -239,7 +239,7 @@ knn2_data <- df_all[, c(
   "Depression"
 )]
 
-# 2. Drop rows with any NA
+# 2. Drop NA
 knn2_data <- na.omit(knn2_data)
 
 # 3. Mark categorical predictors and response as factors
@@ -264,7 +264,7 @@ X2_test  <- X_full[-train_idx2, , drop = FALSE]
 y2_train <- y_full[train_idx2]
 y2_test  <- y_full[-train_idx2]
 
-# Safety: ensure no NAs remain
+# No NA
 train_ok <- complete.cases(X2_train) & !is.na(y2_train)
 test_ok  <- complete.cases(X2_test)  & !is.na(y2_test)
 
@@ -274,7 +274,7 @@ y2_train <- y2_train[train_ok]
 X2_test  <- X2_test[test_ok, , drop = FALSE]
 y2_test  <- y2_test[test_ok]
 
-# 6. 5-fold CV to compare k = 5 vs k = 10
+# 6. 5-fold CV 
 set.seed(123)
 n_train2 <- nrow(X2_train)
 K_folds <- 5
@@ -317,7 +317,7 @@ for (j in seq_along(k_values2)) {
   cv_acc2[j] <- mean(fold_acc)
 }
 
-# 7. CV results and best k (5 vs 10)
+# 7. CV results and best k 
 knn2_cv_results <- data.frame(
   k = k_values2,
   cv_accuracy = cv_acc2
@@ -657,8 +657,7 @@ model9 <- glm(Depression ~ `Gender` + `Age` + `City` + `Academic Pressure` + `CG
 probability9 <- predict(model9, test, type = 'response')
 prediction9 <- ifelse(probability9 > 0.5, 1, 0)
 actual_class9 <- mean(prediction9 == test$Depression)
-actual_class9
-
+actual_clas
 #Model 10
 model10 <- glm(Depression ~ `Gender` + `Age` + `City` + `Academic Pressure` + `CGPA` + `Study Satisfaction` + `Sleep Duration` + `Dietary Habits` + `Have you ever had suicidal thoughts ?` + `Work/Study Hours`, data = train, family = 'binomial')
 probability10 <- predict(model10, test, type = 'response')
